# ------------------------------------------------------
# THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
# ------------------------------------------------------

type UserEntity {
  id: ID!
  email: String!
  firstName: String!
  lastName: String!
  avatarUrl: String
  avatarPresetId: String
  isEmailVerified: Boolean!
  isTwoFactorEnabled: Boolean!
  oauthProvider: OAuthProvider
  createdAt: DateTime!
  updatedAt: DateTime!
}

type AvatarPreset {
  id: String!
  url: String!
}

enum ShareLinkRole {
  VIEWER
  EDITOR
}

enum OAuthProvider {
  Google
  Facebook
  Github
}

"""
A date-time string at UTC, such as 2019-12-03T09:54:33Z, compliant with the date-time format.
"""
scalar DateTime

type TwoFactorSetupResponse {
  secret: String!
  qrCodeUrl: String!
}

type MessageResponse {
  message: String!
}

type ProjectEntity {
  id: ID!
  userId: ID!
  title: String!
  width: Int!
  height: Int!
  thumbnailUrl: String
  content: JSON
  createdAt: DateTime!
  updatedAt: DateTime!
}

"""
The `JSON` scalar type represents JSON values as specified by [ECMA-404](http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf).
"""
scalar JSON

type ShareLinkResponse {
  token: String!
  url: String!
  role: ShareLinkRole!
  expiresAt: DateTime
}

type ShareLinkInfo {
  token: String!
  role: ShareLinkRole!
  isRevoked: Boolean!
  expiresAt: DateTime
  createdAt: DateTime!
}

type SharedProjectAccess {
  project: ProjectEntity!
  role: ShareLinkRole!
  canEdit: Boolean!
  token: String!
}

type ExportAssetResponse {
  fileName: String!
  mimeType: String!
  url: String!
}

type SystemStatus {
  api: String!
  db: String!
  timestamp: String!
}

type ProjectVersionEntity {
  id: ID!
  projectId: ID!
  userId: ID!
  label: String
  content: JSON
  createdAt: DateTime!
}

type ProjectsPageResponse {
  items: [ProjectEntity!]!
  total: Int!
  page: Int!
  totalPages: Int!
}

type TemplateEntity {
  id: ID!
  userId: ID
  title: String!
  thumbnailUrl: String
  width: Int!
  height: Int!
  content: JSON
  isPublic: Boolean!
  createdAt: DateTime!
  updatedAt: DateTime!
}

type Query {
  systemStatus: SystemStatus!
  me: UserEntity!
  projects(pagination: ProjectsPaginationDto): ProjectsPageResponse!
  project(id: ID!): ProjectEntity!
  versions(projectId: ID!): [ProjectVersionEntity!]!
  baseTemplates: [TemplateEntity!]!
  userTemplates: [TemplateEntity!]!
  resolveShareLink(token: String!): SharedProjectAccess!
  avatarPresets: [AvatarPreset!]!
  projectShareLinks(projectId: ID!): [ShareLinkInfo!]!
}

input ProjectsPaginationDto {
  page: Int = 1
  limit: Int = 20
}

type Mutation {
  updateProfile(input: UpdateProfileDto!): UserEntity!
  register(input: RegisterDto!): MessageResponse!
  login(input: LoginDto!): MessageResponse!
  refreshToken: MessageResponse!
  oauthLogin(input: OAuthLoginDto!): MessageResponse!
  verifyEmail(token: String!): MessageResponse!
  requestPasswordReset(input: RequestPasswordResetDto!): MessageResponse!
  resetPassword(input: ResetPasswordDto!): MessageResponse!
  requestMagicLink(input: RequestMagicLinkDto!): MessageResponse!
  verifyMagicLink(token: String!): MessageResponse!
  logout: MessageResponse!
  changePassword(input: ChangePasswordDto!): MessageResponse!
  generateTwoFactorSecret: TwoFactorSetupResponse!
  enableTwoFactor(code: String!): MessageResponse!
  disableTwoFactor(password: String!): MessageResponse!
  createProject(input: CreateProjectDto!): ProjectEntity!
  updateProject(id: ID!, input: UpdateProjectDto!): ProjectEntity!
  autosaveProject(id: ID!, content: JSON!, thumbnailUrl: String): ProjectEntity!
  deleteProject(id: ID!): Boolean!
  cloneProject(id: ID!): ProjectEntity!
  createVersion(projectId: ID!, label: String): ProjectVersionEntity!
  restoreVersion(projectId: ID!, versionId: ID!): ProjectEntity!
  createUserTemplate(input: CreateUserTemplateDto!): TemplateEntity!
  updateUserTemplate(id: ID!, input: UpdateUserTemplateDto!): TemplateEntity!
  deleteUserTemplate(id: ID!): Boolean!
  createProjectFromTemplate(templateId: ID!, title: String): ProjectEntity!
  createShareLink(projectId: ID!, expiresInHours: Float, role: ShareLinkRole): ShareLinkResponse!
  updateShareLinkRole(token: String!, role: ShareLinkRole!): ShareLinkInfo!
  revokeShareLink(token: String!): Boolean!
  autosaveSharedProject(token: String!, content: JSON!): ProjectEntity!
  exportPng(projectId: ID!): ExportAssetResponse!
  exportJpg(projectId: ID!): ExportAssetResponse!
  exportPdf(projectId: ID!): ExportAssetResponse!
  exportAdditionalFormat(projectId: ID!, format: String!): ExportAssetResponse!
}

input UpdateProfileDto {
  firstName: String
  lastName: String
  avatarUrl: String
  avatarPresetId: String
}

input RegisterDto {
  email: String!
  password: String!
  firstName: String!
  lastName: String!
}

input LoginDto {
  email: String!
  password: String!
  twoFactorCode: String
}

input OAuthLoginDto {
  provider: OAuthProvider!
  code: String!
  redirectUri: String!
}

input RequestPasswordResetDto {
  email: String!
}

input ResetPasswordDto {
  token: String!
  newPassword: String!
}

input RequestMagicLinkDto {
  email: String!
}

input ChangePasswordDto {
  currentPassword: String!
  newPassword: String!
}

input CreateProjectDto {
  title: String!
  width: Int
  height: Int
  content: JSON
}

input UpdateProjectDto {
  title: String
  width: Int
  height: Int
  thumbnailUrl: String
  content: JSON
}

input CreateUserTemplateDto {
  title: String!
  width: Int
  height: Int
  thumbnailUrl: String
  content: JSON
  isPublic: Boolean
}

input UpdateUserTemplateDto {
  title: String
  width: Int
  height: Int
  thumbnailUrl: String
  content: JSON
  isPublic: Boolean
}